--- a/.editorconfig
+++ b/.editorconfig
@@ -5,17 +5,19 @@ root = true
 [*]
 indent_style = space
 indent_size = 4
-tab_width = 4
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.{md,json,yml}]
+indent_size = 2
+
 [*.cs]
 csharp_new_line_before_open_brace = none
-csharp_new_line_before_else = true
-csharp_new_line_before_catch = true
-csharp_new_line_before_finally = true
+csharp_new_line_before_else = false
+csharp_new_line_before_catch = false
+csharp_new_line_before_finally = false
 csharp_indent_switch_labels = false
 
 dotnet_naming_symbols.interface.applicable_kinds = interface
